src/objects/SAPHistory__c.object
<CustomObject>
    <description>SFDC1-5442 :This Object will hold the SAP History records.</description>
    <fields>
        <fullName>OpportunityNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5442: This field will hold Opportunity Number on SAP History</description>
        <label>Opportunity Number</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SAP Histories</relationshipLabel>
        <relationshipName>SAPHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalOpportunityNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5442: This field will hold Renewal Opportunity Number on SAP History</description>
        <label>Renewal Opportunity Number</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SAP Histories (Renewal Opportunity Number)</relationshipLabel>
        <relationshipName>SAPHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAPContractNumberNew__c</fullName>
        <description>SFDC1-5442: This field will hold SAP Contract Number on SAP History</description>
        <label>SAP Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCContractNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5442: This field will hold SFDC Contract Number on SAP History</description>
        <label>SFDC Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>SAP Histories (SFDC Contract Number)</relationshipLabel>
        <relationshipName>SAPHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SAP History</label>
    <nameField>
        <label>SAP History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>